@@ -3,10 +3,11 @@ Hash: SHA256
 
 DIST icalendar-1.1.5.gem 49664 SHA256 56c6d5acf1f728db920628203a17b2e1d7d30c2d61d270b96c6234da962edc41 SHA512 10932cfe6163b586ade58469d0efdc2a0c6a45b63f628e0fe63e4f4ddcfa29496d21f4da1925a1909b8f15d160ca8176c2d39498026abdca3b7195161164f217 WHIRLPOOL 22bc330987d0385d3de1a3730d9bbe5e912a92412db5f0991c47ff6bb9496dbda03693145aee3973931bd9015a4aee6d1f25408fcdf0e3ccb1969e0100532c28
 DIST icalendar-1.1.6.gem 50176 SHA256 fc5dce2a2e42de56f9d4a4b5ef64414181fb28f245505da39b432d634ae90bf9 SHA512 b6ff2fcd433a950ccb8b08a9dbb8595375328600e082c5c1d83688c9243dcfc5d5dcff03bfac25657f7504964911bfc0c343215688602c26558c66e2e1f75535 WHIRLPOOL ac649693d922fc1401817efc245862bab708475ba8aff13dc5d7d6613d290214f8e9615543727203bd75f39382367bfb0eec71509ed5fd1a9e510d9dfc131834
+DIST icalendar-1.2.1.gem 50688 SHA256 036fb9b500b3268f53b25f57f54629a1c2eabc00828c4c99a75fac0d69e6f79f SHA512 ed6dde621313451c83796a29458fadb9061593b9f8dc0e56bb154b77b9d98ada2b304d54900d7c95edc74c08af1b1723faf863b868a3247b319b282ae7bb3e2a WHIRLPOOL c7834d1615d5055c7416691a3ef23044b03ddbe421b4f2ab95289214ee8d67bd6621a73a4dc6e23e1401aee49aae1cca776714d9a6fa83d2142133b6fc230c6d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlBgHN4ACgkQiIP6VqMIqNeAgwD/T1+qdimhnp8kpI30rQXWlDo2
-WfBeM4X64xzq/y9ui6oBAIKltrwXzYMN+UwHWY4fvcUF7Hw0pgIZ3Wt645zwRG+d
-=tlJP
+iF4EAREIAAYFAlCvMj4ACgkQiIP6VqMIqNf3+QD/fL1nJgNB8NKqsHFWKpKxPvmN
+E66MHjfoMhuIw2iRtQwA/jvZbuk0cL6usA6gZ3YE7CoGNm7I55Avs9HQ2gd8ygeD
+=vUpe
 -----END PGP SIGNATURE-----
